--- a/join.html
+++ b/join.html
@@ -10,9 +10,31 @@
     
     <!-- Link to your custom styles.css -->
     <link rel="stylesheet" href="styles.css"> <!-- or "css/styles.css" if placed inside a 'css' folder -->
+    <style>
+        /* Footer Styles */
+        .footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: #f1f1f1;
+            text-align: left;
+            padding: 10px 20px;
+            font-size: 20px;
+        }
+         /* Registered Address and Contact Numbers */
+         .address-contact {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #f1f1f1;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+         }
+       
+    </style>
 </head>
 <body>
-    <!-- Navbar (same as on the landing page) -->
+    <!-- Navigationbar (same as on the landing page) -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">Artist Agency</a>
@@ -48,9 +70,16 @@
             <button type="submit" class="btn btn-primary w-100">Apply Now</button>
         </form>
     </section>
-    <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2025 Artist Agency. All Rights Reserved.</p>
-    </footer>
+   
+  <!-- address and contact area for user company info -->
+  <div class="address-contact">
+    <p>Registered Company Address: 123 Example St, City, Country</p>
+    <p>Contact Numbers: +123 456 7890 | +987 654 3210</p>
+</div>
+
+<footer class="bg-dark text-white text-center py-3">
+    <p>&copy; 2025 Artist Agency. All Rights Reserved.</p>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
