--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
         </div>
     </section>
-
+<!-- Copy right repeated on all pages -->
     <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2025 Artist Agency. All Rights Reserved.</p>
     </footer>
