--- a/join.html
+++ b/join.html
@@ -74,7 +74,9 @@
   <!-- address and contact area for user company info -->
   <div class="address-contact">
     <p>Registered Company Address: 123 Example St, City, Country</p>
-    <p>Contact Numbers: +123 456 7890 | +987 654 3210</p>
+    <p>"country of buisness origin numbers: 0121 121 0121</p>
+    <p>International Contact Numbers: +123 456 7890 | +987 654 3210</p>
+    <p>Careers Engquiries: Via email | yourangency@mywebsite.co.uk</p>
 </div>
 
 <footer class="bg-dark text-white text-center py-3">
